modified:   Express/.env 	modified:   Express/index.js 	modified:   Express/package.json 	modified:   client-side/.dockerignore 	modified:   client-side/.env 	modified:   client-side/public/index.html 	modified:   client-side/src/App.js 	modified:   client-side/src/Header.js 	modified:   client-side/src/NavigationBar/NavBar.js 	modified:   client-side/src/NavigationBar/NavBarUser.js 	modified:   client-side/src/NavigationBar/Sections.js 	modified:   client-side/src/NavigationBar/SideBar.js 	modified:   client-side/src/NavigationBar/SideBarUser.js 	modified:   client-side/src/NavigationBar/navSubmenu.js 	modified:   client-side/src/Redux/Actions/AuthActions.js 	modified:   client-side/src/Redux/Actions/CartActions.js 	modified:   client-side/src/Redux/Actions/ProductsActions.js 	modified:   client-side/src/Redux/Store.js 	modified:   client-side/src/Routing/Routes.js 	deleted:    client-side/src/SetupForm.js 	deleted:    client-side/src/context.js 	new file:   client-side/src/images/0.jpg 	new file:   client-side/src/images/1.jpg 	new file:   client-side/src/images/10.jpg 	new file:   client-side/src/images/11.jpg 	new file:   client-side/src/images/12.jpg 	new file:   client-side/src/images/13.jpg 	new file:   client-side/src/images/14.jpg 	new file:   client-side/src/images/15.jpg 	new file:   client-side/src/images/16.jpg 	new file:   client-side/src/images/17.jpg 	new file:   client-side/src/images/18.jpg 	new file:   client-side/src/images/19.jpg 	new file:   client-side/src/images/2.jpg 	new file:   client-side/src/images/20.jpg 	new file:   client-side/src/images/21.jpg 	new file:   client-side/src/images/22.jpg 	new file:   client-side/src/images/23.jpg 	new file:   client-side/src/images/24.jpg 	new file:   client-side/src/images/25.jpg 	new file:   client-side/src/images/26.jpg 	new file:   client-side/src/images/27.jpg 	new file:   client-side/src/images/28.jpg 	new file:   client-side/src/images/29.jpg 	new file:   client-side/src/images/3.jpg 	new file: 

--- a/Express/package.json
+++ b/Express/package.json
@@ -120,7 +120,7 @@
     "nodemon": "^2.0.15"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "dev": "node migration.js up & node index.js"
   },
   "engines": {
