--- a/client-side/.env
+++ b/client-side/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_URL={"Express":"http://localhost:5000","Laravel":"http://localhost:8000"}
 GIT_URL=http://github.com/teozax/Data/blob/gh-pages/images/
+NODE_ENV=development
