--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,7 @@ services:
     environment:
       MYSQL_HOST: localhost
       MYSQL_ROOT_PASSWORD: 1
-      # MYSQL_DATABASE: react_express
-      MYSQL_ALLOW_EMPTY_PASSWORD: yes
-    # env_file: ./Express/.env
+      # MYSQL_ALLOW_EMPTY_PASSWORD: yes
     volumes:
       - ./initDB:/docker-entrypoint-initdb.d
     healthcheck:
@@ -29,36 +27,36 @@ services:
       PMA_PORT: 3306
     depends_on:
       - db
-      
 
   express:
-    build: ./Express
-    image: tzacheilas/express:1.0
+    # build: ./Express
+    image: tzacheilas/express:1.1
     depends_on:
       db:
         condition: service_healthy
-    # env_file: ./Express/.env
+    env_file: ./Express/.env
     ports:
       - 5000:5000
     stdin_open: true
     tty: true
 
   laravel:
-    build: ./Laravel
-    image: tzacheilas/laravel:1.0
+    # build: ./Laravel
+    image: tzacheilas/laravel:1.1
     ports:
       - 8000:8000
     depends_on:
       db:
         condition: service_healthy
-    # env_file: ./Laravel/.env
+    env_file: ./Laravel/.env
     stdin_open: true
     tty: true
     entrypoint: sh -c "php artisan migrate && php artisan db:seed --class=DatabaseSeeder && php artisan serve --host 0.0.0.0"
 
   react:
     # build: ./client-side
-    image: tzacheilas/react:1.0
+    image: tzacheilas/react:1.1
+    env_file: ./client-side/.env
     ports:
       - 3001:3000
     stdin_open: true
