--- a/Express/.env
+++ b/Express/.env
@@ -1,8 +1,11 @@
-# DB_HOST = localhost 
-# DB_PASSWORD = 
+#DB_HOST = localhost 
+#DB_PASSWORD = 
+#CLIENT_ORIGIN = http://localhost:3000
 
 DB_HOST = db 
 DB_PASSWORD = 1
+CLIENT_ORIGIN = http://localhost:3001
+
 DB_USER = root
 DB_NAME = react_express
 DB_PORT = 3306
@@ -11,4 +14,4 @@ DB_CHARSET = utf8mb4_general_ci
 
 NODE_ENV = development
 PORT = 5000
-CLIENT_ORIGIN = http://localhost:3001
+
